force-app/main/default/objects/svfcloud__Settings__mdt/svfcloud__Settings__mdt.object-meta.xml
<CustomObject>
    <label>Settings</label>
</CustomObject>