force-app/main/default/objects/svfcloud__Settings__mdt/fields/svfcloud__AccessPoint__c.field-meta.xml
<CustomField>
    <fullName>svfcloud__AccessPoint__c</fullName>
    <defaultValue>&quot;DEFAULT&quot;</defaultValue>
    <inlineHelpText>この値は変更しないでください。</inlineHelpText>
    <label>Access Point</label>
    <length>32</length>
    <type>Text</type>
</CustomField>