force-app/main/default/objects/svfcloud__Settings__mdt/fields/svfcloud__ActivateActivityHistory__c.field-meta.xml
<CustomField>
    <fullName>svfcloud__ActivateActivityHistory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activate Activity History</label>
    <type>Checkbox</type>
</CustomField>