force-app/main/default/objects/svfcloud__Settings__mdt/fields/svfcloud__ClientId__c.field-meta.xml
<CustomField>
    <fullName>svfcloud__ClientId__c</fullName>
    <label>ClientId</label>
    <length>32</length>
    <type>Text</type>
</CustomField>