force-app/main/default/objects/svfcloud__Settings__mdt/fields/svfcloud__ClientPrivateKey__c.field-meta.xml
<CustomField>
    <fullName>svfcloud__ClientPrivateKey__c</fullName>
    <label>PrivateKey</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>