force-app/main/default/objects/svfcloud__Settings__mdt/fields/svfcloud__ClientSecret__c.field-meta.xml
<CustomField>
    <fullName>svfcloud__ClientSecret__c</fullName>
    <label>Secret</label>
    <length>64</length>
    <type>Text</type>
</CustomField>