force-app/main/default/objects/svfcloud__Settings__mdt/fields/svfcloud__VfPermission__c.field-meta.xml
<CustomField>
    <fullName>svfcloud__VfPermission__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Create Visualforce Page</label>
    <type>Checkbox</type>
</CustomField>