force-app/main/default/objects/svfcloud__Settings__mdt/fields/svfcloud__ViewAllPrinters__c.field-meta.xml
<CustomField>
    <fullName>svfcloud__ViewAllPrinters__c</fullName>
    <defaultValue>true</defaultValue>
    <label>View All Printers</label>
    <type>Checkbox</type>
</CustomField>